fixed file upload not showing in message and over flowing files in file section

--- a/client/stylesheets/base.less
+++ b/client/stylesheets/base.less
@@ -3314,8 +3314,6 @@ a.github-fork {
 					label {
 						font-family: Lato;
 						position: absolute;
-						margin-left: 19px;
-						margin-right: auto;
 						margin-top: 19px;
 					}
 				}
